Add Category model, CSV seed script, and category associations to views

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,12 @@
-<h1>All Products</h1>
-
+<<h1>All Products</h1>
 <ul>
-  <% (@products || []).each do |product| %>
+  <% @products.each do |product| %>
     <li>
-      <%= link_to (product.title || "Untitled"), product_path(product) %><br>
+      <%= link_to product.title, product_path(product) %><br>
       Price: <%= product.price %><br>
-      Stock: <%= product.stock_quantity %>
+      Stock: <%= product.stock_quantity %><br>
+      Category: <%= product.category.name %>
     </li>
   <% end %>
 </ul>
+
